fix(home page): hide image on mobile devices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,10 @@ a {
 * {
   box-sizing: border-box;
 }
+
+
+@media(max-width: 800px) {
+  .mobile-hidden {
+      display: none !important;
+  }
+}
